crates/liter-llm-ffi/include/liter_llm.h


typedef struct LITERLLMBatchListQuery LITERLLMBatchListQuery;
typedef struct LITERLLMBatchListResponse LITERLLMBatchListResponse;
typedef struct LITERLLMBatchObject LITERLLMBatchObject;
typedef struct LITERLLMChatCompletionRequest LITERLLMChatCompletionRequest;
typedef struct LITERLLMChatCompletionResponse LITERLLMChatCompletionResponse;
typedef struct LITERLLMCreateBatchRequest LITERLLMCreateBatchRequest;
typedef struct LITERLLMCreateFileRequest LITERLLMCreateFileRequest;
typedef struct LITERLLMCreateImageRequest LITERLLMCreateImageRequest;
typedef struct LITERLLMCreateSpeechRequest LITERLLMCreateSpeechRequest;
typedef struct LITERLLMCreateTranscriptionRequest LITERLLMCreateTranscriptionRequest;
typedef struct LITERLLMCustomProviderConfig LITERLLMCustomProviderConfig;
typedef struct LITERLLMDefaultClient LITERLLMDefaultClient;
typedef struct LITERLLMDeleteResponse LITERLLMDeleteResponse;
typedef struct LITERLLMEmbeddingRequest LITERLLMEmbeddingRequest;
typedef struct LITERLLMEmbeddingResponse LITERLLMEmbeddingResponse;
typedef struct LITERLLMFileListQuery LITERLLMFileListQuery;
typedef struct LITERLLMFileListResponse LITERLLMFileListResponse;
typedef struct LITERLLMFileObject LITERLLMFileObject;
typedef struct LITERLLMImagesResponse LITERLLMImagesResponse;
typedef struct LITERLLMModelsListResponse LITERLLMModelsListResponse;
typedef struct LITERLLMModerationRequest LITERLLMModerationRequest;
typedef struct LITERLLMModerationResponse LITERLLMModerationResponse;
typedef struct LITERLLMOcrRequest LITERLLMOcrRequest;
typedef struct LITERLLMOcrResponse LITERLLMOcrResponse;
typedef struct LITERLLMProviderCapabilities LITERLLMProviderCapabilities;
typedef struct LITERLLMProviderConfig LITERLLMProviderConfig;
typedef struct LITERLLMRateLimitConfig LITERLLMRateLimitConfig;
typedef struct LITERLLMRerankRequest LITERLLMRerankRequest;
typedef struct LITERLLMRerankResponse LITERLLMRerankResponse;
typedef struct LITERLLMResponseObject LITERLLMResponseObject;
typedef struct LITERLLMSearchRequest LITERLLMSearchRequest;
typedef struct LITERLLMSearchResponse LITERLLMSearchResponse;
typedef struct LITERLLMTranscriptionResponse LITERLLMTranscriptionResponse;
typedef struct LITERLLMWaitForBatchConfig LITERLLMWaitForBatchConfig;
char *literllm_transcription_response_to_json(const LITERLLMTranscriptionResponse *ptr);
void literllm_transcription_response_free(LITERLLMTranscriptionResponse *ptr);
char *literllm_moderation_response_to_json(const LITERLLMModerationResponse *ptr);
void literllm_moderation_response_free(LITERLLMModerationResponse *ptr);
char *literllm_rerank_response_to_json(const LITERLLMRerankResponse *ptr);
void literllm_rerank_response_free(LITERLLMRerankResponse *ptr);
char *literllm_search_response_to_json(const LITERLLMSearchResponse *ptr);
void literllm_search_response_free(LITERLLMSearchResponse *ptr);
char *literllm_ocr_response_to_json(const LITERLLMOcrResponse *ptr);
void literllm_ocr_response_free(LITERLLMOcrResponse *ptr);
char *literllm_models_list_response_to_json(const LITERLLMModelsListResponse *ptr);
void literllm_models_list_response_free(LITERLLMModelsListResponse *ptr);
char *literllm_response_object_to_json(const LITERLLMResponseObject *ptr);
void literllm_response_object_free(LITERLLMResponseObject *ptr);
char *literllm_wait_for_batch_config_to_json(const LITERLLMWaitForBatchConfig *ptr);
LITERLLMWaitForBatchConfig *literllm_wait_for_batch_config_default(void);
LITERLLMChatCompletionResponse *literllm_default_client_chat(const LITERLLMDefaultClient *this_,
                                                             const LITERLLMChatCompletionRequest *req);
LITERLLMEmbeddingResponse *literllm_default_client_embed(const LITERLLMDefaultClient *this_,
                                                         const LITERLLMEmbeddingRequest *req);
LITERLLMModelsListResponse *literllm_default_client_list_models(const LITERLLMDefaultClient *this_);
LITERLLMImagesResponse *literllm_default_client_image_generate(const LITERLLMDefaultClient *this_,
                                                               const LITERLLMCreateImageRequest *req);
int32_t literllm_default_client_speech(const LITERLLMDefaultClient *this_,
                                       const LITERLLMCreateSpeechRequest *req,
                                       uint8_t **out_ptr,
                                       uintptr_t *out_len,
                                       uintptr_t *out_cap);
LITERLLMTranscriptionResponse *literllm_default_client_transcribe(const LITERLLMDefaultClient *this_,
                                                                  const LITERLLMCreateTranscriptionRequest *req);
LITERLLMModerationResponse *literllm_default_client_moderate(const LITERLLMDefaultClient *this_,
                                                             const LITERLLMModerationRequest *req);
LITERLLMRerankResponse *literllm_default_client_rerank(const LITERLLMDefaultClient *this_,
                                                       const LITERLLMRerankRequest *req);
LITERLLMSearchResponse *literllm_default_client_search(const LITERLLMDefaultClient *this_,
                                                       const LITERLLMSearchRequest *req);
LITERLLMOcrResponse *literllm_default_client_ocr(const LITERLLMDefaultClient *this_,
                                                 const LITERLLMOcrRequest *req);
LITERLLMFileObject *literllm_default_client_create_file(const LITERLLMDefaultClient *this_,
                                                        const LITERLLMCreateFileRequest *req);
LITERLLMFileObject *literllm_default_client_retrieve_file(const LITERLLMDefaultClient *this_,
                                                          const char *file_id);
LITERLLMDeleteResponse *literllm_default_client_delete_file(const LITERLLMDefaultClient *this_,
                                                            const char *file_id);
LITERLLMFileListResponse *literllm_default_client_list_files(const LITERLLMDefaultClient *this_,
                                                             const LITERLLMFileListQuery *query);
int32_t literllm_default_client_file_content(const LITERLLMDefaultClient *this_,
                                             const char *file_id,
                                             uint8_t **out_ptr,
                                             uintptr_t *out_len,
                                             uintptr_t *out_cap);
LITERLLMBatchObject *literllm_default_client_create_batch(const LITERLLMDefaultClient *this_,
                                                          const LITERLLMCreateBatchRequest *req);
LITERLLMBatchObject *literllm_default_client_retrieve_batch(const LITERLLMDefaultClient *this_,
                                                            const char *batch_id);
LITERLLMBatchListResponse *literllm_default_client_list_batches(const LITERLLMDefaultClient *this_,
                                                                const LITERLLMBatchListQuery *query);
char *literllm_provider_capabilities_to_json(const LITERLLMProviderCapabilities *ptr);
void literllm_provider_capabilities_free(LITERLLMProviderCapabilities *ptr);
char *literllm_provider_config_to_json(const LITERLLMProviderConfig *ptr);
void literllm_provider_config_free(LITERLLMProviderConfig *ptr);
char *literllm_rate_limit_config_to_json(const LITERLLMRateLimitConfig *ptr);
void literllm_rate_limit_config_free(LITERLLMRateLimitConfig *ptr);
LITERLLMDefaultClient *literllm_create_client(const char *api_key,
                                              const char *base_url,
                                              uint64_t timeout_secs,
                                              uint32_t max_retries,
                                              const char *model_hint);
LITERLLMDefaultClient *literllm_create_client_from_json(const char *json);
int32_t literllm_register_custom_provider(const LITERLLMCustomProviderConfig *config);
int32_t literllm_unregister_custom_provider(const char *name);
LITERLLMProviderCapabilities *literllm_capabilities(const char *provider_name);
char *literllm_all_providers(void);
char *literllm_complex_provider_names(void);
double literllm_completion_cost(const char *model,
                                uint64_t prompt_tokens,
                                uint64_t completion_tokens);
double literllm_completion_cost_with_cache(const char *model,
                                           uint64_t prompt_tokens,
                                           uint64_t cached_tokens,
                                           uint64_t completion_tokens);
void literllm_clear(void);
uintptr_t literllm_count_tokens(const char *model,
                                const char *text);
uintptr_t literllm_count_request_tokens(const char *model,
                                        const LITERLLMChatCompletionRequest *req);
int32_t literllm_check_bound(const char *context,
                             uintptr_t current_len,
                             uintptr_t incoming,
                             uintptr_t limit);
void literllm_ensure_crypto_provider(void);