packages/csharp/LiterLlm/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_models_list_response_to_json")]
    internal static extern IntPtr ModelsListResponseToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_models_list_response_free")]
    internal static extern void ModelsListResponseFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_moderation_response_to_json")]
    internal static extern IntPtr ModerationResponseToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_moderation_response_free")]
    internal static extern void ModerationResponseFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_ocr_response_to_json")]
    internal static extern IntPtr OcrResponseToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_ocr_response_free")]
    internal static extern void OcrResponseFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_provider_capabilities_to_json")]
    internal static extern IntPtr ProviderCapabilitiesToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_provider_capabilities_free")]
    internal static extern void ProviderCapabilitiesFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_provider_config_to_json")]
    internal static extern IntPtr ProviderConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_provider_config_free")]
    internal static extern void ProviderConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_rate_limit_config_to_json")]
    internal static extern IntPtr RateLimitConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_rate_limit_config_free")]
    internal static extern void RateLimitConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_rerank_response_to_json")]
    internal static extern IntPtr RerankResponseToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_rerank_response_free")]
    internal static extern void RerankResponseFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_response_object_to_json")]
    internal static extern IntPtr ResponseObjectToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_response_object_free")]
    internal static extern void ResponseObjectFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_search_response_to_json")]
    internal static extern IntPtr SearchResponseToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_search_response_free")]
    internal static extern void SearchResponseFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_transcription_response_to_json")]
    internal static extern IntPtr TranscriptionResponseToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_transcription_response_free")]
    internal static extern void TranscriptionResponseFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_wait_for_batch_config_to_json")]
    internal static extern IntPtr WaitForBatchConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_client")]
    internal static extern IntPtr CreateClient(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string apiKey,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string baseUrl,
        ulong timeoutSecs,
        uint maxRetries,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string modelHint
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_client_from_json")]
    internal static extern IntPtr CreateClientFromJson(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string json
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_register_custom_provider")]
    internal static extern void RegisterCustomProvider(
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_unregister_custom_provider")]
    internal static extern int UnregisterCustomProvider(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_capabilities")]
    internal static extern IntPtr Capabilities(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string providerName
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_all_providers")]
    internal static extern IntPtr AllProviders();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_complex_provider_names")]
    internal static extern IntPtr ComplexProviderNames();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_completion_cost")]
    internal static extern IntPtr CompletionCost(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string model,
        ulong promptTokens,
        ulong completionTokens
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_completion_cost_with_cache")]
    internal static extern IntPtr CompletionCostWithCache(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string model,
        ulong promptTokens,
        ulong cachedTokens,
        ulong completionTokens
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_clear")]
    internal static extern void Clear();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_count_tokens")]
    internal static extern ulong CountTokens(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string model,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_count_request_tokens")]
    internal static extern ulong CountRequestTokens(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string model,
        IntPtr req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_check_bound")]
    internal static extern void CheckBound(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string context,
        ulong currentLen,
        ulong incoming,
        ulong limit
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_ensure_crypto_provider")]
    internal static extern void EnsureCryptoProvider();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_wait_for_batch_config_default")]
    internal static extern IntPtr WaitForBatchConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_chat")]
    internal static extern IntPtr DefaultClientChat(
        IntPtr handle,
        IntPtr req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_embed")]
    internal static extern IntPtr DefaultClientEmbed(
        IntPtr handle,
        IntPtr req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_list_models")]
    internal static extern IntPtr DefaultClientListModels(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_image_generate")]
    internal static extern IntPtr DefaultClientImageGenerate(
        IntPtr handle,
        IntPtr req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_speech")]
    internal static extern int DefaultClientSpeech(
        IntPtr handle,
        IntPtr req,
        out IntPtr outPtr,
        out UIntPtr outLen,
        out UIntPtr outCap
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_transcribe")]
    internal static extern IntPtr DefaultClientTranscribe(
        IntPtr handle,
        IntPtr req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_moderate")]
    internal static extern IntPtr DefaultClientModerate(
        IntPtr handle,
        IntPtr req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_rerank")]
    internal static extern IntPtr DefaultClientRerank(
        IntPtr handle,
        IntPtr req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_search")]
    internal static extern IntPtr DefaultClientSearch(
        IntPtr handle,
        IntPtr req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_ocr")]
    internal static extern IntPtr DefaultClientOcr(
        IntPtr handle,
        IntPtr req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_create_file")]
    internal static extern IntPtr DefaultClientCreateFile(
        IntPtr handle,
        IntPtr req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_retrieve_file")]
    internal static extern IntPtr DefaultClientRetrieveFile(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string fileId
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_delete_file")]
    internal static extern IntPtr DefaultClientDeleteFile(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string fileId
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_list_files")]
    internal static extern IntPtr DefaultClientListFiles(
        IntPtr handle,
        IntPtr query
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_file_content")]
    internal static extern int DefaultClientFileContent(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string fileId,
        out IntPtr outPtr,
        out UIntPtr outLen,
        out UIntPtr outCap
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_create_batch")]
    internal static extern IntPtr DefaultClientCreateBatch(
        IntPtr handle,
        IntPtr req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_retrieve_batch")]
    internal static extern IntPtr DefaultClientRetrieveBatch(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string batchId
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_list_batches")]
    internal static extern IntPtr DefaultClientListBatches(
        IntPtr handle,
        IntPtr query
    );
